<resources>
    <string name="app_name">StoryIntermediate</string>
    <string name="empty_image_warning">Empty Image</string>
    <string name="create_story">Buat Story</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Deskripsi</string>
    <string name="submit_story">Submit Story</string>
    <string name="capture_image">Tangkap Image</string>
    <string name="switch_camera">Ganti Camera</string>
    <string name="banner_image">Banner Image</string>
    <string name="dicoding">Dicoding</string>
    <string name="email">Email</string>
    <string name="login_dulu">Masuk dulu</string>
    <string name="isi_data_yang_benar">Isi data yang benar</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="tvGreating">Selamat datang di CITIZEN</string>
    <string name="tvAjakan">Mari berkumpul dengan orang orang yang sesuai dengan minat anda.</string>
    <string name="signup">Daftar</string>
    <string name="daftar_akun_dulu">Daftar akun dulu</string>
    <string name="name">Nama</string>
    <string name="add_story_floating_button">Add Story Floating Button</string>
    <string name="description_text">Bankit adalah kesempatan</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Empty Text</string>
    <string name="citizen_story">CITIZEN STORY</string>
    <string name="logout">Keluar</string>
    <string name="bahasa">Bahasa</string>
    <string name="warning_text">User Not found</string>
    <string name="success_register">Success Register</string>
    <string name="success_upload">Success Upload</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_id">495fc0e392f924af</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="start_point">Start Point</string>
</resources>