<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="283dp"
        android:layout_height="258dp"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/banner_image"
        android:cropToPadding="false"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_image" />

    <TextView
        android:id="@+id/tvGreating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvGreating"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAjakan"
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:text="@string/tvAjakan"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreating" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="76dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAjakan" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="72dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAjakan" />
</androidx.constraintlayout.widget.ConstraintLayout>